trigger-actions-framework/main/default/objects/Trigger_Action_Populator_Override__mdt/Trigger_Action_Populator_Override__mdt.object-meta.xml
<CustomObject>
    <description>Field populators for Trigger Actions</description>
    <label>Trigger Action Populator</label>
    <pluralLabel>Trigger Action Populators</pluralLabel>
</CustomObject>