trigger-actions-framework/main/default/objects/Trigger_Action_Populator_Override__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activation Flag</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>