trigger-actions-framework/main/default/objects/Trigger_Action_Populator_Override__mdt/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <description>Name of apex class storing populator</description>
    <label>Apex Class Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>