trigger-actions-framework/main/default/objects/Trigger_Action_Populator_Override__mdt/fields/Before_Insert__c.field-meta.xml
<CustomField>
    <fullName>Before_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Executes in Before Insert Context</description>
    <label>Before Insert</label>
    <type>Checkbox</type>
</CustomField>