trigger-actions-framework/main/default/objects/Trigger_Action_Populator_Override__mdt/fields/Before_Update__c.field-meta.xml
<CustomField>
    <fullName>Before_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Executes in Before Update context</description>
    <label>Before Update</label>
    <type>Checkbox</type>
</CustomField>