trigger-actions-framework/main/default/objects/Trigger_Action_Populator_Override__mdt/fields/sObject_Trigger_Setting__c.field-meta.xml
<CustomField>
    <fullName>sObject_Trigger_Setting__c</fullName>
    <description>Parent SObject for the populators</description>
    <label>sObject Trigger Setting</label>
    <referenceTo>sObject_Trigger_Setting__mdt</referenceTo>
    <relationshipLabel>Trigger Action Populators</relationshipLabel>
    <relationshipName>Trigger_Action_Populators</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>