trigger-actions-framework/main/default/objects/Trigger_Action_Populator_Override__mdt/listViews/Default.listView-meta.xml
<ListView>
    <fullName>Default</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>Before_Insert__c</columns>
    <columns>Before_Update__c</columns>
    <columns>sObject_Trigger_Setting__c</columns>
    <filterScope>Everything</filterScope>
    <label>Default</label>
</ListView>